--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   <section id="education">
     <h2>Education</h2>
     <ul>
-      <li><strong>B.E in Electronics & Communication</strong> – KLE Institute of Technology, Hubli (2023) – 73.91%</li>
-      <li><strong>XII</strong> – KLE’s Prerana PU College, Hubli (2019) – 73.66%</li>
-      <li><strong>X</strong> – Sri Ranganath International School, Bagalkot (2017) – 8.6 CGPA</li>
+      <li><b>B.E in Electronics & Communication</b> – KLE Institute of Technology, Hubli (2023) – 73.91%</li>
+      <li><b>XII</b> – KLE’s Prerana PU College, Hubli (2019) – 73.66%</li>
+      <li><b>X</b> – Sri Ranganath International School, Bagalkot (2017) – 8.6 CGPA</li>
     </ul>
   </section>
 
@@ -42,16 +42,16 @@
       <li>Python for Machine Learning – Sathvit Softech</li>
       <li>Full Stack Development – KodNest (Ongoing)</li>
     </ul>
-    <p><strong>Languages:</strong> Java, SQL, HTML, CSS, Python</p>
-    <p><strong>Tools:</strong> CodeBlocks, VS Code, Eclipse, EDA Playground, Workbench</p>
-    <p><strong>Soft Skills:</strong> Problem-Solving, Debugging, Communication, Team Collaboration</p>
+    <p><b>Languages:</b> Java, SQL, HTML, CSS, Python</p>
+    <p><b>Tools:</b> CodeBlocks, VS Code, Eclipse, EDA Playground, Workbench</p>
+    <p><b>Soft Skills:</b> Problem-Solving, Debugging, Communication, Team Collaboration</p>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
     <ul>
-      <li><strong>IoT Based Agriculture Monitoring System:</strong> Centralized monitoring using atmospheric sensors and Wi-Fi data transfer.</li>
-      <li><strong>APB-Slave Verification:</strong> Verified APB transactions using SystemVerilog and UVM with a custom APB-Master testbench.</li>
+      <li><b>IoT Based Agriculture Monitoring System:</b> Centralized monitoring using atmospheric sensors and Wi-Fi data transfer.</li>
+      <li><>APB-Slave Verification:</b> Verified APB transactions using SystemVerilog and UVM with a custom APB-Master testbench.</li>
     </ul>
   </section>
 
@@ -69,4 +69,5 @@
     <p>&copy; 2025 Anusha B Patil. All rights reserved.</p>
   </footer>
 </body>
+
 </html>
