--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <h2>Projects</h2>
     <ul>
       <li><b>IoT Based Agriculture Monitoring System:</b> Centralized monitoring using atmospheric sensors and Wi-Fi data transfer.</li>
-      <li><>APB-Slave Verification:</b> Verified APB transactions using SystemVerilog and UVM with a custom APB-Master testbench.</li>
+      <li><b>APB-Slave Verification:</b> Verified APB transactions using SystemVerilog and UVM with a custom APB-Master testbench.</li>
     </ul>
   </section>
 
@@ -71,3 +71,4 @@
 </body>
 
 </html>
+
